--- a/composer.json
+++ b/composer.json
@@ -1,13 +1,13 @@
 {
-  "name": "get-away/api-communication",
-  "description": "The core components required to communicate with the Get Away API.",
-  "keywords": ["get-away", "get away", "php", "sdk", "get-away api", "api-communication"],
+  "name": "travelduck/api-communication",
+  "description": "The core components required to communicate with the TravelDuck API.",
+  "keywords": ["TravelDuck", "travel duck", "php", "sdk", "TravelDuck api", "api-communication"],
   "type": "library",
   "license": "MIT",
   "authors": [
     {
       "name": "Colin Stannard",
-      "email": "colin.stannard@cbsindustries.com"
+      "email": "colin.stannard@travelduck.co"
     }
   ],
   "minimum-stability": "dev",
@@ -17,7 +17,7 @@
   },
   "autoload": {
     "psr-0": {
-      "GetAway": ""
+      "TravelDuck": ""
     }
   }
 }
